ajustes da pagina principal
ajustes na pagina principal e criação do protótipo da pagina de produtos

--- a/style.css
+++ b/style.css
@@ -1,17 +1,20 @@
 body{
     background-color: rgb(246, 246, 246);
 }
-header{
-    margin: 0 auto;
-}
 #cab{
     display: flex;
     flex-direction: row-reverse;
     column-gap: 30px;
     align-items: center;
+    margin: 0 auto;
+    margin: 5px;
+}
+#cab > div:nth-child(n) > a:nth-child(n){
+    text-decoration: none;
+    color: black;
 }
 #icon{
-    margin-right: 770px;
+    margin-right: 54%;
 }
 #produto{
     min-height: 100%;  
@@ -20,7 +23,7 @@ header{
     width: 90%; 
     display: flex;
     flex-direction: row;
-    column-gap: 10px;
+    column-gap: 14px;
     align-items: center;
     justify-content: center;
     font-size: 150%;
@@ -32,11 +35,47 @@ header{
     background-color: rgb(227, 115, 40);
     border: 1px solid #eee;
     border-radius: 20px;
-    font: bold 20px arial;
+    font: bold 22px arial;
     box-shadow: 5px 5px 5px #eee;
     text-shadow:none;
     border-style: outset;
     height: 40px;
-    width: 50%;
-    margin-left: 50%;
+    width: 60%;
+    margin-left: 39%;
+    box-shadow: 3px 4px 4px rgba(90, 90, 90, 0.77);
+    -webkit-box-shadow: 3px 4px 4px rgba(90, 90, 90, 0.77);
+    -moz-box-shadow: 3px 4px 4px rgba(90, 90, 90, 0.77);
+}
+#calcados{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 20px;
+    width: 1100px;
+    max-height: 700px;
+    margin: 0 auto;
+    margin-top: 10%;
+    align-items: center;
+}
+#calcados > div:nth-child(n){
+    width: 250px;
+    height: 300px;
+    border: 3px solid rgba(85, 84, 84, 0.507);
+    border-radius: 10px;
+    border-style: outset;
+    box-shadow: 3px 4px 4px rgba(90, 90, 90, 0.77);
+    -webkit-box-shadow: 3px 4px 4px rgba(90, 90, 90, 0.77);
+    -moz-box-shadow: 3px 4px 4px rgba(90, 90, 90, 0.77);
+}
+#calcados > div:nth-child(n) > img:nth-child(n){
+    width: 250px;
+    height: 220px;
+    /*background-color: blueviolet;*/
+    margin: 0 auto;
+}
+p{
+    margin: 0;
+}
+h3{
+    font-family: 'Times New Roman', Times, serif;
+    margin: 0 auto;
 }
