--- a/style.css
+++ b/style.css
@@ -58,24 +58,28 @@ body{
 }
 #calcados > div:nth-child(n){
     width: 250px;
-    height: 300px;
-    border: 3px solid rgba(85, 84, 84, 0.507);
+    height: 355px;
+    border-left: 0.5px solid rgba(90, 90, 90, 0.77);
+    border-top: 0.5px solid rgba(90, 90, 90, 0.77);
     border-radius: 10px;
-    border-style: outset;
+    /*border-style: outset;*/
     box-shadow: 3px 4px 4px rgba(90, 90, 90, 0.77);
     -webkit-box-shadow: 3px 4px 4px rgba(90, 90, 90, 0.77);
     -moz-box-shadow: 3px 4px 4px rgba(90, 90, 90, 0.77);
 }
 #calcados > div:nth-child(n) > img:nth-child(n){
-    width: 250px;
-    height: 220px;
-    /*background-color: blueviolet;*/
-    margin: 0 auto;
+    max-width: 100%;
 }
-p{
+#calcados > div:nth-child(n) > p:nth-child(n){
+    font-size: 20px;
     margin: 0;
+    text-align: center;
 }
-h3{
+#calcados > div:nth-child(n) > h4:nth-child(n){
+    max-height: 42px;
+    margin: 0;
+    text-align: center;
+    padding: 10px;
+    font-size: 18px;
     font-family: 'Times New Roman', Times, serif;
-    margin: 0 auto;
 }
