--- a/style.css
+++ b/style.css
@@ -2,19 +2,20 @@ body{
     background-color: rgb(246, 246, 246);
 }
 #cab{
+    max-width: 100%;
     display: flex;
     flex-direction: row-reverse;
-    column-gap: 30px;
+    column-gap: 3%;
     align-items: center;
     margin: 0 auto;
-    margin: 5px;
+    margin: 1%;
+}
+#cab > div:nth-child(n + 8){
+    margin-right: 50%;
 }
 #cab > div:nth-child(n) > a:nth-child(n){
     text-decoration: none;
     color: black;
-}
-#icon{
-    margin-right: 54%;
 }
 #produto{
     min-height: 100%;  
@@ -67,15 +68,19 @@ body{
     -webkit-box-shadow: 3px 4px 4px rgba(90, 90, 90, 0.77);
     -moz-box-shadow: 3px 4px 4px rgba(90, 90, 90, 0.77);
 }
-#calcados > div:nth-child(n) > img:nth-child(n){
+#calcados > div:nth-child(n) > a:nth-child(n){
+    text-decoration: none;
+    color: black;
+}
+#calcados > div:nth-child(n) > a:nth-child(n) > img:nth-child(n){
     max-width: 100%;
 }
-#calcados > div:nth-child(n) > p:nth-child(n){
+#calcados > div:nth-child(n) > a:nth-child(n) > p:nth-child(n){
     font-size: 20px;
     margin: 0;
     text-align: center;
 }
-#calcados > div:nth-child(n) > h4:nth-child(n){
+#calcados > div:nth-child(n) > a:nth-child(n) > h4:nth-child(n){
     max-height: 42px;
     margin: 0;
     text-align: center;
