--- a/css/style.css
+++ b/css/style.css
@@ -9,13 +9,15 @@ body{
     align-items: center;
     margin: 0 auto;
     margin: 1%;
+    font-family : "HelveticaNeue",Helvetica,Arial,sans-serif;
 }
 #cab > div:nth-child(n + 8){
-    margin-right: 50%;
+    margin-right: 46%;
 }
-#cab > div:nth-child(n) > a:nth-child(n){
-    text-decoration: none;
+#cab a{
     color: black;
+    letter-spacing: 0.10em;
+    text-decoration: none;
 }
 #produto{
     min-height: 100%;  
@@ -33,7 +35,9 @@ body{
     margin-top: 0;
 }
 #compra{
-    background-color: rgb(227, 115, 40);
+    /*background-color: rgb(227, 115, 40);*/
+    background-color: #000;
+    color: #eee;
     border: 1px solid #eee;
     border-radius: 20px;
     font: bold 22px arial;
@@ -102,8 +106,11 @@ body{
     height: 190px;
 }
 #continuar{
-        margin-top: 15%;
-        margin-left: 22%;
+        margin-top: 10%;
+        margin-left: 24%;
         font-size: 20px;
         font-family: 'Times New Roman', Times, serif;
+}
+#login > div:nth-child(n) > form:nth-child(n) > a:nth-child(n){
+    font-size: 15px;
 }
