--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,16 @@
+html{
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
 body{
     background-color: rgb(246, 246, 246);
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
+#icon{
+    margin-right: 50%;
 }
 #cab{
     max-width: 100%;
@@ -113,4 +124,15 @@ body{
 }
 #login > div:nth-child(n) > form:nth-child(n) > a:nth-child(n){
     font-size: 15px;
+}
+#frame{
+    width: 100%;
+    height: 330px;
+    position: relative;
+    bottom: 0;
+    margin: 0;
+    margin-top: 175px;
+    border: 0;
+    padding: 0;
+    background-color: #000;
 }
