--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body{
     border: 0;
 }
 #icon{
-    margin-right: 50%;
+    margin-right: 30%;
 }
 #cab{
     max-width: 100%;
@@ -69,7 +69,7 @@ body{
     width: 1100px;
     max-height: 700px;
     margin: 0 auto;
-    margin-top: 10%;
+    /*margin-top: 10%;*/
     align-items: center;
 }
 #calcados > div:nth-child(n){
@@ -135,4 +135,30 @@ body{
     border: 0;
     padding: 0;
     background-color: #000;
+    z-index: -1000;
+}
+.prod{
+    position: static;
+    height: 30px;
+    margin: 5%;
+    margin-left: 10%;
+    font-size: 40px;
+    font-family: 'Times New Roman', Times, serif;
+}
+hr{
+    height: 2px;
+    color: rgb(136, 20, 20);
+    background-color: #000;
+}
+#btnmais{
+    width: 68px;
+    height: 68px;
+    background-color: rgb(246, 246, 246);
+    border-radius: 50px;
+    cursor: pointer;
+    border: 0;
+}
+svg:hover{
+    width: 65px;
+    height: 65px;
 }
