--- a/css/menu.css
+++ b/css/menu.css
@@ -1,5 +1,5 @@
 .car{
-    position: absolute;
+    position: relative;
     font-size: 16px;
     font-family: "HelveticaNeue",Helvetica,Arial,sans-serif;
     width: 100%;
